// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SaveBadge /> renders \`1M\` with a count of 1,000,000 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    1.0M
  </div>
</div>
`;

exports[`<SaveBadge /> renders 1K when count is 1,000 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    1.0K
  </div>
</div>
`;

exports[`<SaveBadge /> renders 10K when count is 10,000 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    10.0K
  </div>
</div>
`;

exports[`<SaveBadge /> renders 100K when count is 100,000 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    100.0K
  </div>
</div>
`;

exports[`<SaveBadge /> renders 999 when count is 999 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    999
  </div>
</div>
`;

exports[`<SaveBadge /> renders a count over a label when both have positive values 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
  label="Test"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    666
  </div>
</div>
`;

exports[`<SaveBadge /> renders a filled icon when \`isActive\` is true 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    Save
  </div>
</div>
`;

exports[`<SaveBadge /> renders a number when \`count\` is above zero 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    666
  </div>
</div>
`;

exports[`<SaveBadge /> renders an unfilled icon when \`isActive\` is false 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    Save
  </div>
</div>
`;

exports[`<SaveBadge /> renders only an icon if \`iconOnly\` is on 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
  label="Test"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`<SaveBadge /> renders only an icon with "Save" when \`count\` is zero 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    Save
  </div>
</div>
`;

exports[`<SaveBadge /> renders only an icon with "Save," when props are empty 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  font-weight: 400;
  line-height: 1.3;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  text-transform: uppercase;
  text-align: center;
  margin-top: 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #7D7D7D;
}

.c0:hover {
  color: #0A7BC2;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Bookmark icon"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 15.21l4.63-5.05a.5.5 0 0 1 .74 0L14 15.21V2H4v13.21zm5-3.97l-5.13 5.6A.5.5 0 0 1 3 16.5v-15c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v15a.5.5 0 0 1-.87.33L9 11.24z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    Save
  </div>
</div>
`;
